--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
   <string name="reset">Reset</string>
   <string name="tap_on_my_location_button">Tap on my location button</string>
   <string name="_3">3</string>
+  <string name="distance">Distance</string>
+  <string name="time">Time</string>
+  <string name="share">Share</string>
+  <string name="result">%1$s km</string>
 </resources>
