Map resetting to current location after stopping

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
   <string name="time">Time</string>
   <string name="share">Share</string>
   <string name="result">%1$s km</string>
+  <string name="_00_00_00">00:00:00</string>
+  <string name="_0_0km">0.0km</string>
 </resources>
